--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,3 @@
-
-
 <div id="main-wrapper">
 
   <app-header></app-header>
@@ -18,19 +16,20 @@
     <app-bredcrums></app-bredcrums>
 
     <!-- Mis rutas -->
+    <router-outlet></router-outlet>
 
     <!-- ============================================================== -->
     <!-- Start Page Content -->
     <!-- ============================================================== -->
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
-                  <router-outlet></router-outlet>
+
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ============================================================== -->
     <!-- End PAge Content -->
     <!-- ============================================================== -->
